@@ -1356,7 +1356,7 @@ struct liststruct {
 #define MODE_NOKNOCK		0x800000
 #define MODE_NOINVITE  		0x1000000
 #define MODE_FLOODLIMIT		0x2000000
-#define MODE_NOHIDING		0x4000000
+#define MODE_MODREG		0x4000000
 #ifdef STRIPBADWORDS
 #define MODE_STRIPBADWORDS	0x8000000
 #endif
